<resources>
    <string name="app_name">Money Manager</string>
    <string name="title_home">Home</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_received">Received</string>
    <string name="title_sent">Sent</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_income">Add Income</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add_income">Add Income</string>
    <string name="send_money">Send Money</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_text">Sign In</string>
    <string name="e_mail_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="not_registered_text">Not yet Registered? \n Sign Up Here</string>
    <string name="reason_for_expenses">Reason for expenses</string>
    <string name="amount">Amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="reason_for_expense_and_amount">Enter reason for expense and amount</string>
    <string name="source_of_income">Source Of Income</string>
    <string name="source_of_income_and_amount">Enter source of Income and amount</string>
    <string name="total_funds">Total Funds</string>
    <string name="total_income">Total Income</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_amount_received">Total Amount Received</string>
    <string name="total_amount_sent">Total Amount Sent</string>
    <string name="receivers_id">Receivers Id</string>
    <string name="enter_recipients_id_and_amount">Enter recipients Id and amount</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="registered_sign_in_here">Already Registered? \n SignIn Here</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_income">Edit Income</string>
    <string name="delete_confirmation">Do you want to delete this entry</string>

    <string-array name="gender_spinner">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>