<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />


</group>

    <group android:checkableBehavior="single">
    <item android:title="Extras">
        <menu >
            <item
                android:id="@+id/navigation_sign_out"
                android:icon="@drawable/ic_baseline_assignment_return_24"
                android:title="@string/sign_out" />
</menu>
    </item>
    </group>

</menu>